# motion-ai-cs

./: .env.example  .gcloudignore  .gitignore  00-index.md  01-architecture.md  02-api.md  03-db.sql  04-ticketing.md  05-sla-alert.md  06-llm.md  07-deploy.md  08-self-learning.md  IMPROVEMENT_ANALYSIS.md  PROJECT_GUIDE.md  README.md  README_STAGE2.md  README_V1.md  STAGE2.1_COMPLETE.md  STAGE2_COMPLETE.md  TESTING_GUIDE.md  deploy-stage2.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml  guidance.txt  init.sql  quick-start.sh  start-dev.sh
ChatLoggerBot/: README.md  gradlew  settings.gradle.kts
ChatLoggerWeb/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  test.html  vite.config.ts
docs/: learning-system-v2-design.md
gcp/: README.md  cloudbuild-worker.yaml  deploy.sh  (+4 more)
server-py/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.worker  bridge.py  pyproject.toml  requirements.txt
server-py/.claude/: TODO.md
server-py/dashboard_api/: __init__.py  auth.py  main.py
server-py/ingest_api/: __init__.py  main.py
server-py/migrations/: 004_resolution_and_profiles.sql
server-py/shared/: __init__.py  config.py  constants.py  database.py  migrations.py  models.py  schemas.py  utils.py
server-py/worker/: __init__.py  clinic_profiling.py  llm.py  main.py  slack.py
server-py/worker/learning/: __init__.py  analyzer.py  collector.py  prompts.py  scheduler.py
server-py/worker/staff_analysis/: __init__.py  analyzer.py  collector.py  prompts.py  scheduler.py
(+113 files in other folders)
